--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.70.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
